--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="bg-warning py-3 text-center shadow">
-        <h1 class="text-white animate__animated animate__fadeInDown">Welcome to Banana Shop!</h1>
+        <h1 class="text-white animate__animated animate__fadeInDown">Banana Shop</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
