--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #ff0000;
+    background-color: #ff0000!Important;
     text-align: center;
     padding: 20px;
 }
