--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Buy 1 Get 1 Free</h5>
                         <p class="card-text">Purchase 1 Cavendish Banana and get another one for free!</p>
-                        <button class="btn btn-warning btn-custom text-white shownow" data-id="1" data-name="Cavendish Banana"
+                        <button class="btn btn-warning btn-custom text-white show-now" data-id="1" data-name="Cavendish Banana"
                             data-price="1.00">Show Now</button>
                     </div>
                 </div>
